<?xml version="1.0"?>
<package format="2">
  <name>husky_sim</name>
  <version>0.0.0</version>
  <description>GPS-IMU navigation pipeline with Traversability Estimation and OSM data usage for Path Planning tested in Gazebo simulator</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="agishrus@felk.cvut.cz">Ruslan Agishev</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/ctu-vras/husky_sim</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
